# manga

./: CLAUDE.md  README.md
frontend/: .env.example  middleware.ts  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/annotate/: page.tsx
frontend/app/api/panels/labeled/: route.ts
frontend/app/api/pdfs/: route.ts
frontend/app/api/review/: route.ts
frontend/app/auth/error/: page.tsx
frontend/app/auth/signin/: page.tsx
frontend/app/reader/: page.tsx
frontend/app/review/: page.tsx
frontend/app/voice-test/: page.tsx
frontend/components/: Navigation.tsx  PDFViewer.tsx  PanelQuestionModal.tsx  SessionProvider.tsx  VoiceInput.tsx
frontend/lib/: auth.ts  chapterStats.ts  db.ts  pdf-slicer.ts  questionDecision.ts  questionGeneration.ts  userContext.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20251204101302_init_language_learning_schema/: migration.sql
frontend/prisma/migrations/20251204141647_add_panel_position_metadata/: migration.sql
frontend/prisma/migrations/20251205090606_auto_dq/: migration.sql
frontend/prisma/migrations/20251205120718_add_chapter_metadata/: migration.sql
frontend/scripts/: updateChapterStats.ts
scripts/: .gitignore  consolidateWords.ts  package-lock.json  package.json  processChapter.ts  process_chapter.py  process_page.py  pyproject.toml  seedDatabase.ts  seedDecision.ts  transformToSeed.ts  tsconfig.json
scripts/chapter_outputs/: Yotsubato-ch1.json  Yotsubato-ch2.json
scripts/seed_outputs/: Yotsubato-ch1.json  Yotsubato-ch2.json
(+5 files in other folders)
